# jiawen

./: .gitignore  PawsMeme (爪爪表情) 技术规格说明书 (Technical Specification).md
jiawen/: .npmrc  Dockerfile  ideas.md  package.json  pnpm-lock.yaml
jiawen-engine/: .gitignore  Makefile  README.md  env_example.txt  pyproject.toml
jiawen-engine/assets/skeletons/: export_smal_rigged.py  extract_smal_dog.py  smal_dog_joints.json  smal_dog_skeleton.glb
jiawen-engine/configs/: default.yaml
jiawen-engine/configs/pets/: cat.yaml  dog.yaml
jiawen-engine/scripts/: gen_demo_assets.py  install_mac.sh  run_pipeline.py  setup_gpu_server.sh
jiawen-engine/tests/: test_config.py  test_skeleton.py
jiawen-engine/video2pet/: __init__.py  cli.py  config.py  pipeline.py
jiawen-engine/video2pet/export/: __init__.py  glb.py
jiawen-engine/video2pet/pose/: __init__.py  detector.py  estimator_3d.py
jiawen-engine/video2pet/reconstruction/: __init__.py  gaussian.py  mesh.py
jiawen-engine/video2pet/rigging/: __init__.py  skeleton.py
jiawen-engine/video2pet/video/: __init__.py  processor.py  veo_client.py
jiawen-engine/web/: api.py  app.py  gpu_runner.py
jiawen/client/: index.html
jiawen/client/public/ai-generated/: index.json
jiawen/client/src/: App.tsx  index.css
jiawen/client/src/components/: CTASection.tsx  EcosystemSection.tsx  Footer.tsx  GallerySection.tsx  GuideSection.tsx  HeroSection.tsx  Model3DViewer.tsx  Navbar.tsx  SpecsSection.tsx  StorySection.tsx  TechnologySection.tsx
jiawen/client/src/lib/: images.ts
jiawen/client/src/pages/: Demo.tsx  Home.tsx
